--- a/content-patterns/headings/index.html
+++ b/content-patterns/headings/index.html
@@ -54,42 +54,47 @@ footer: false
 
     <div class="col col--md-two-thirds col--lg-two-thirds">
       <h1 id="Headings">Headings</h1>
-        <p>Research shows that our users are most interested in learning about our statistics and analysis of the data.</p>
-        <p>Our research has shown that users come to bulletins to complete tasks; generally, to learn about new data, access new data, or find out how certain data was collected.</p>
-        <p>These headings separate the different types of content on the page to reflect those needs. This helps users to easily complete the tasks they need to.</p>
+          <p>Research shows that our users are most interested in learning about our statistics and analysis of the data.</p>
+          <p>Our research has shown that users come to bulletins to complete tasks. Generally, to:</p>
+            <li>learn about new data
+            <li>access new data
+            <li>find out how certain data was collected</p>
+            </li>
+          <p>Bulletin headings separate the different types of content on the page to reflect those user needs, helping users to complete their tasks easily.</p>
 
       <h2>Introducing the sections in a bulletin</h2>
-        <p>
-        To make our headings clearer, we use the bulletin topic in our section headings.
+        <p>We use the bulletin topic in each section heading to make it clear what each section is about.</p>
+        <p>For example, on the "Employment" page of the Labour Market collection, the headings would look like this:</p>
+        <div class="content-box">
+            <h2 class="heading-xsmall margin-top--4 margin-bottom--1">On this page:</h2>
+            <ul class="section-contents">
+              <li>
+                <a href="#analysis">Analysis of employment</a>
+              </li>
+              <li>
+                <a href="#data">Employment data</a>
+              </li>
+              <li>
+                <a href="#using-data">Glossary</a>
+              </li>
+              <li>
+                <a href="#using-data">Measuring this data</a>
+              </li>
+              <li>
+                <a href="#using-data">Strengths and limitations</a>
+              </li>
+              <li>
+                <a href="#more-about">Find out more</a>
+              </li>
+              <li>
+                <a href="#more-links">You may also be interested in</a>
+              </li>
+              <li>
+                <a href="#contact">Contact us</a>
+              </li>
+            </ul>
+          </div>
 
-        For example, on the "Employment" page of the Labour Market collection, the headings would look like this:</p>
-        <h2 class="heading-xsmall margin-top--4 margin-bottom--1">On this page:</h2>
-        <ul class="section-contents">
-          <li>
-            <a href="#analysis">Analysis of employment</a>
-          </li>
-          <li>
-            <a href="#data">Employment data</a>
-          </li>
-          <li>
-            <a href="#using-data">Glossary</a>
-          </li>
-          <li>
-            <a href="#using-data">Measuring this data</a>
-          </li>
-          <li>
-            <a href="#using-data">Strengths and limitations</a>
-          </li>
-          <li>
-            <a href="#more-about">Find out more</a>
-          </li>
-          <li>
-            <a href="#more-links">You may also be interested in</a>
-          </li>
-          <li>
-            <a href="#contact">Contact us</a>
-          </li>
-        </ul>
     <br>
     <h3 id="what-to-write-in-each-section">What to write in each section</h3>
           <table>
