--- a/sprint/4/page-header/index.html
+++ b/sprint/4/page-header/index.html
@@ -242,7 +242,7 @@ summary: "Crimes against households, adults, children, businesses and society in
     </div>
 
     <!-- Notice  -->
-    <div class="wrapper">
+    <!-- <div class="wrapper">
       <div class="col-wrap">
         <div class="col col--lg-two-thirds">
           <div class="margin-bottom-sm--2 margin-bottom-md--1 border-left--carrot background--white padding-left--1 padding-top--1 padding-bottom--1 padding-right--1">
@@ -257,7 +257,7 @@ summary: "Crimes against households, adults, children, businesses and society in
             </div>
         </div>
       </div>
-    </div>
+    </div> -->
 
 
     <!-- release information -->
