Updates to content types page, menu updates, changed styling on headings page

--- a/content-patterns/data/index.html
+++ b/content-patterns/data/index.html
@@ -40,7 +40,7 @@ footer: false
           <h2 class="heading-xsmall margin-top--4 margin-bottom--1">Pages in this guide:</h2>
           <ul class="section-contents">
             <li>
-              <a class="font-weight--bold" href="../Bulletins-collections-articles">Bulletins, collections and articles</a>
+              <a href="../using-content-types">When and how to use content types</a>
             </li>
             <li>
               <a href="../headings">Headings</a>
