--- a/content-patterns/headings/index.html
+++ b/content-patterns/headings/index.html
@@ -7,7 +7,20 @@ secondary-nav: false
 language-switch: false
 footer: false
 ---
+<style>
+.prototype .content-box li{
+  margin-bottom:0px!important;
+}
+.prototype .content-box{
+  overflow: visible;
+  padding-top: 30px;
+  padding-bottom: 30px;
+}
 
+.prototype .content-box h2{
+  margin-top: 0px!important;
+}
+</style>
 <div class="wrapper prototype">
   <div class="col-wrap" style="margin-bottom: 200px;">
 
@@ -24,6 +37,9 @@ footer: false
               <a href="#Headings">Headings</a>
             </li>
             <li>
+              <a href="#introducing the sections in a bulletin">Introducing the sections in a bulletin</a>
+            </li>
+            <li>
               <a href="#what-to-write-in-each-section">What to write in each section</a>
             </li>
             <li>
@@ -34,7 +50,7 @@ footer: false
           <h2 class="heading-xsmall margin-top--4 margin-bottom--1">Pages in this guide:</h2>
           <ul class="section-contents">
             <li>
-              <a href="../Bulletins-collections-articles">Bulletins, collections and articles</a>
+              <a href="../using-content-types">When and how to use content types</a>
             </li>
             <li>
               <a class="font-weight--bold" href="../headings">Headings</a>
@@ -62,10 +78,10 @@ footer: false
             </li>
           <p>Bulletin headings separate the different types of content on the page to reflect those user needs, helping users to complete their tasks easily.</p>
 
-      <h2>Introducing the sections in a bulletin</h2>
+    <h2 id="introducing the sections in a bulletin">Introducing the sections in a bulletin</h2>
         <p>We use the bulletin topic in each section heading to make it clear what each section is about.</p>
-        <p>For example, on the "Employment" page of the Labour Market collection, the headings would look like this:</p>
-        <div class="content-box">
+        <p>For example, on the "Employment" page of the Labour market collection, the headings would look like this:</p>
+        <div class="content-box li-grey">
             <h2 class="heading-xsmall margin-top--4 margin-bottom--1">On this page:</h2>
             <ul class="section-contents">
               <li>
