--- a/content-patterns/using-content-types/index.html
+++ b/content-patterns/using-content-types/index.html
@@ -21,13 +21,13 @@ footer: false
           <h2 class="heading-xsmall margin-top--4 margin-bottom--1">On this page:</h2>
           <ul class="section-contents">
             <li>
-              <a href="#Bulletins">What is a bulletin?</a>
+              <a href="#Bulletins">Bulletins</a>
             </li>
             <li>
-              <a href="#what-is-an-overview-page">Overview bulletins</a>
+              <a href="#Overview-bulletins">Overview bulletins</a>
             </li>
             <li>
-              <a href="#what-is-an-article">What is an article?</a>
+              <a href="#Articles">Articles</a>
             </li>
             <li>
               <a href="#how-to-decide-whether-you-need-more-pages">How to decide whether you need more pages?</a>
@@ -93,20 +93,20 @@ footer: false
         </table>
       <br>
 
-          <h3 id="what-is-an-overview-page">Overview bulletins</h3>
+          <h3 id="Overview-bulletins">Overview bulletins</h3>
               <p>Where a release contains more than one bulletin, an overview summarises the most important information from across the whole release.</p>
               <p>For example, the <strong>Crime release</strong> may include bulletins on Weapons, Fraud and Homicide.</p>
               <p>The <strong>Crime overview</strong> would comment on overall Crime trends in the latest data, and might briefly explain the main causes of any changes (linking to the relevant bulletins for more detail).</p>
 
-          <h3 id="what-is-an-article">Articles</h3>
-              <p>An article is less structured than a bulletin, and allows for more detailed information on a subject. Typical articles might include:</p>
-              <ul>
-                  <li>deeper analysis of a topic that cannot fit in the bulletin template
-                  <li>analysis of the latest data alongside other data sources
-                  <li>more information about methodology or planned changes to a future release</li>
-              </ul>
-              <p>As with any content on our website, there should be a clear user need for everything we publish. The length and detail of an article should be relative to the interest of our users. We will measure this using analytics and through user research.</p>
-              <p>An article should only be used when it is not possible to communicate all of the information users need in a bulletin (because of the number of words required, or because the analysis crosses multiple bulletins or releases, for example).</p>
+      <h2 id="Articles">Articles</h2>
+          <p>An article is less structured than a bulletin, and allows for more detailed information on a subject. Typical articles might include:</p>
+          <ul>
+              <li>deeper analysis of a topic that cannot fit in the bulletin template
+              <li>analysis of the latest data alongside other data sources
+              <li>more information about methodology or planned changes to a future release</li>
+          </ul>
+          <p>As with any content on our website, there should be a clear user need for everything we publish. The length and detail of an article should be relative to the interest of our users. We will measure this using analytics and through user research.</p>
+          <p>An article should only be used when it is not possible to communicate all of the information users need in a bulletin (because of the number of words required, or because the analysis crosses multiple bulletins or releases, for example).</p>
 
       <h2 id="how-to-decide-whether-you-need-more-pages">How to decide whether you need more bulletins?</h2>
               <p>Digital publishing will help you determine whether more pages would add value. We will use search data and user research to understand what users need. We may run extra research, or suggest small-scale experiments we can run to validate the need for a new page.</p>
