Updates to Analysis page

--- a/content-patterns/headings/index.html
+++ b/content-patterns/headings/index.html
@@ -72,7 +72,7 @@ footer: false
     <!-- Content -->
 
     <div class="col col--md-two-thirds col--lg-two-thirds">
-      <h1 id="Headings">Headings</h1>
+      <h1 id="Headings">Writing bulletin headings</h1>
           <p>Research shows that our users are most interested in learning about our statistics and analysis of the data.</p>
           <p>Our research has shown that users come to bulletins to complete tasks. Generally, to:</p>
             <li>learn about new data
