--- a/content-patterns/analysis/index.html
+++ b/content-patterns/analysis/index.html
@@ -21,16 +21,13 @@ footer: false
           <h2 class="heading-xsmall margin-top--4 margin-bottom--1">On this page:</h2>
           <ul class="section-contents">
             <li>
-              <a href="#Writing your analysis">Writing your analysis</a>
+              <a href="#analysis">Writing your analysis</a>
             </li>
             <li>
-              <a href="#lead-point">Lead point</a>
+              <a href="#lead-finding">Lead finding</a>
             </li>
             <li>
-              <a href="#supporting-information">Supporting information</a>
-            </li>
-            <li>
-              <a href="#main-points">Main points</a>
+              <a href="#findings">Findings</a>
             </li>
             <li>
               <a href="#charts-and-interactives">Charts and interactives</a>
@@ -62,13 +59,12 @@ footer: false
     <!-- Content -->
 
     <div class="col col--md-two-thirds col--lg-two-thirds">
-      <h1 id="Analysis">Analysis</h1>
-      <h2 id="Writing your analysis">Writing your analysis</h2>
+      <h1 id="Analysis">Writing bulletin analysis</h1>
 
-      <p>When writing stories about statistics, focus on the 'story'  –  what's interesting, noteworthy or important.</p>
-      <p>Don't couch the story in caveats and warnings. Where there are warnings about the reliability of the data, say so as briefly as possible. Avoid repeating caveats throughout your stories.</p>
+      <p>When writing stories about statistics, focus on the 'story' – what's interesting, noteworthy or important.</p>
+      <p>Don't couch the story in warnings. Where there are questions about the reliability of the data, say so as briefly as possible. Avoid repeating caveats throughout your stories.</p>
 
-  <h2 id="lead-point">Lead point</h2>
+  <h2 id="lead-point">Lead finding</h2>
       <p>  This should be the most important story about your new data. When thinking about importance, consider:
       </p><ul>
 
@@ -77,34 +73,53 @@ footer: false
       <li>is it statistically significant?
       <li>could anything about this point be misleading? </li></ul>
 
-      <p>
-      The lead point consists of a headline, a subtitle, and can include a visual (a chart, for example):
-      </p>
+      <p>The lead finding can be made up of:</p>
+
       <p><strong>A headline</strong></p>
-          <p>This should be less than 90 characters, summarise the most important story in your summary, and accurately describe any accompanying visuals or text.</p>
-          <p><strong>Subtitle</strong></p>
-          <p>Describe the statistical measure, geographic coverage, and time period as briefly as possible.</p>
+          <p>Your lead finding should always have a headline. This should be less than 90 characters, summarise the most important story in your bulletin, and accurately describe any accompanying visuals or text.</p>
+                <div class="content-box">
+                  <h4> For example </h4>
+                  <h2>Firearm crimes have increased for the first time since 2005</h2>
+                </div>
+
           <p><strong>Visual</strong></p>
-          <p>This will typically be a chart, and should back up the message in the headline. A subtitle should explain the geography and time period.</p>
-          <p>Where a chart could be misleading, or isn't appropriate, consider using a quote instead. The quote should be 50 to 60 words, and clearly attributed to an ONS employee, with their job title.</p>
-          <p>Remember that you can add a quote alongside your lead point (see <span style="text-decoration:underline;">supporting information</span>) , which can be useful if you need to add nuance.</p>
+          <p>This will typically be a chart, and should back up the message in the headline. A subtitle should describe the statistical measure, geographic coverage and time period as briefly as possible.</p></p>
+              <div class="content-box">
+                <h4> For example </h4>
+                <h4>England and Wales, year ending March 2003 to year ending December 2017</h4>
+                <img style="width:100%" src="{{ "/assets/img/charts/weapons_firearm_chart_lg.png" | relative_url }}" class="" alt="">
+                <p class="font-xsmall">Source: Police recorded crime, Home Office</p>
+              </div>
 
-  <h2 id="supporting-information">Supporting information</h2>
-      <p>Alongside the lead point, supporting information can add nuance, or extra detail about the lead point. Supporting information can take the form of a quote or bullet points.</p>
-      <p><strong>A quote</strong></p>
-      <p>This is particularly useful where the lead point is complex, or requires further explanation.</p>
-      <p>The quote can be 50 to 60 words long, and should be attributed to an ONS employee and their job title. </p>
-      <p>The quote should not contradict the headline or visual from your lead point.</p>
-      <p><strong>Bullet points</strong></p>
-      <p>Where there are three or four short points to make which give more information about the summary.</p>
+          <p><strong>A quote</strong></p>
+          <p>Where a chart could be misleading, or isn't appropriate, consider using a quote instead.</p>
+          <p>The quote should be 50 to 60 words, and clearly attributed to an ONS employee, with their job title.</p>
+          <p>Remember that you can add a quote alongside your lead finding, which can be useful if you need to add an explanation.</p>
+          <p>The quote should not contradict the headline or visual from your lead point.</p>
+              <div class="content-box">
+                <h4> For example </h4>
+                {% include quote.html %}
+              </div>
 
-  <h2 id="main-points">Main points</h2>
-    <p>  A main point is trend or finding from the data which is worth reporting. It
+          <p><strong>Bullet points</strong></p>
+          <p>Where there are three or four short points to make which give more information about the lead finding. Each point should be a single, concise sentence.</p>
+              <div class="content-box">
+                <h4> For example </h4>
+                <ul>
+                  <li>Knife crime rose 22%</li>
+                  <li>Gun crime rose 11%</li>
+                  <li>63% of the increase in gun crime was driven by rises in London and Manchester</li>
+                </ul>
+              </div>
+
+
+  <h2 id="findings">Findings</h2>
+    <p>A finding is a trend from the data which is worth reporting. It
     should answer a question the user might have about your statistics.</p>
     <p>Main findings consist of a title and commentary. Add visuals, such as charts,
     tables, or interactives to backup each point. Use the warning pattern to draw
     attention to essential limitations or uncertainty which might affect the way
-    people interpret a statistics.</p>
+    people interpret statistics.</p>
     <p>Aim for 5 or 6 main points on a page, adding up to no more than 800 words. If
     you know that users want to know more, consider adding more pages to your
     release.</p>
