--- a/content-patterns/data/index.html
+++ b/content-patterns/data/index.html
@@ -21,19 +21,13 @@ footer: false
           <h2 class="heading-xsmall margin-top--4 margin-bottom--1">On this page:</h2>
           <ul class="section-contents">
             <li>
-              <a href="#What is a bulletin?">What is a bulletin?</a>
+              <a href="#intro">Writing your introduction</a>
             </li>
             <li>
-              <a href="#what-is-a-collection">What is a collection?</a>
+              <a href="#links">Adding links</a>
             </li>
             <li>
-              <a href="#what-is-an-overview-page">What is an overview page?</a>
-            </li>
-            <li>
-              <a href="#what-is-an-article">What is an article?</a>
-            </li>
-            <li>
-              <a href="#how-to-decide-whether-you-need-more-pages">How to decide whether you need more pages?</a>
+              <a href="#external-links">Linking to data from other places</a>
             </li>
           </ul>
 
@@ -59,70 +53,36 @@ footer: false
     <!-- Content -->
 
     <div class="col col--md-two-thirds col--lg-two-thirds">
-      <h1 id="Data">Data</h1>
-      <h2 id="What is a bulletin?">What is a bulletin?</h2>
-      <h1 id="data">Data</h1>
-  <h3>Introduction</h3>
-      <p>
-      A brief introduction paragraph should explain where the data comes from.</p>
-      <div class="content-box">
-        <h3 class="heading-medium">For example</h3>
-        <h4>Estimates of employment, unemployment, economic inactivity, hours worked and redundancies are derived from the Labour Force Survey (LFS), a survey of households.</h4>
-      </div>
-  <h3>Links</h3>
-      <p>This section includes a link to all data related to this collection. To help users find useful or related data, you can add links to up to five datasets on this topic.</p>
-      <p>Each link should include the title of the dataset, followed by a 30-word description of what the dataset contains. The description should start with the most relevant data to the topic covered, mention any other data which could be useful, and identify the source (unless that's clear from the title).</p>
-      <p>
+      <h1 id="Data">Writing about data in bulletins</h1>
+        <h3 id="intro">Writing your introduction</h3>
+              <p>
+              A brief introduction paragraph should explain where the data comes from.</p>
+                  <div class="content-box">
+                    <h3 class="heading-medium">For example</h3>
+                    <h4>Estimates of employment, unemployment, economic inactivity, hours worked and redundancies are derived from the Labour Force Survey (LFS), a survey of households.</h4>
+                  </div>
 
+          <h3 id="links">Adding links</h3>
+              <p>This section includes a link to all data related to this release. To help users find useful or related data, you can add links to up to five datasets on this topic.</p>
+              <p>Each link should include the title of the dataset, followed by a 30-word description of what the dataset contains. The description should start with the most relevant data to the topic covered, mention any other data which could be useful, and identify the source (unless that's clear from the title).</p>
+                  <div class="content-box">
+                    <h3 class="heading-medium">For example</h3>
+                  <strong><span style="text-decoration:underline;">Crime in England and Wales: Annual supplementary tables</span></strong>
+                  </br><em>Dataset | Released on 19 July 2018</em>
+                  </br>Includes data on crime involving weapons, perceptions of the police, and anti-social behaviour. From the Crime Survey for England and Wales (CSEW).
+                  </br>
+                  </br>
+                  </div>
 
-<strong>Weapons crime data</strong>
-</p>
-<p>
+            <p>If you link to the same dataset in a few different places, keep the description as consistent as you can.</p>
 
-    <strong><span style="text-decoration:underline;">Crime in England and Wales: Annual supplementary tables</span></strong>
-</p>
-<p>
-
-    <em>Dataset | Released on 19 July 2018</em>
-</p>
-<p>
-
-    Includes data on crime involving weapons, perceptions of the police, and anti-social behaviour. From the Crime Survey for England and Wales (CSEW).
-</p>
-<p>
-If you link to the same dataset in a few different places, keep the description as consistent as you can.
-</p>
-<p>
-<strong><span style="text-decoration:underline;">	</span>Violent crime data</strong>
-</p>
-<p>
-
-    <strong><span style="text-decoration:underline;">Crime in England and Wales: Annual supplementary tables</span></strong>
-</p>
-<p>
-
-    <em>Dataset | Released on 19 July 2018</em>
-</p>
-<p>
-
-    Includes data on violent crime, perceptions of the police, and anti-social behaviour. From the Crime Survey for England and Wales (CSEW).
-</p>
-<h3>Linking to data from other places</h3>
-
-
-<p>
-You can include links to specific data sources from external sources. Make this clear by including the name of the source in brackets.
-</p>
-<p>
-<span style="text-decoration:underline;">	<strong>A millennium of macroeconomic data (Bank of England)</strong></span>
-</p>
-<p>
-<strong><span style="text-decoration:underline;">	<em>Data | Released in 2016</em></span></strong>
-</p>
-<p>
-
-    Worksheets A49 and A50 include historic estimates of unemployment over hundreds of years.
-</p>
-    </div>
-  </div>
-</div>
+        <h3 id="external-links">Linking to data from other places</h3>
+            <p>You can include links to specific data sources from external sources. Make this clear by including the name of the source in brackets.</p>
+            <div class="content-box">
+              <h3 class="heading-medium">For example</h3>
+              <strong><span style="text-decoration:underline;">A millennium of macroeconomic data (Bank of England)</span></strong>
+            </br><em>Data | Released in 2016</em>
+            </br>Worksheets A49 and A50 include historic estimates of unemployment over hundreds of years.
+            </br>
+            </br>
+            </div>
