Added Writing about data page, updated nav on all pages

--- a/content-patterns/content-patterns/index.html
+++ b/content-patterns/content-patterns/index.html
@@ -30,6 +30,9 @@ footer: false
             <li>
               <a href="../Data">Data</a>
             </li>
+            <li>
+              <a href="../writing-about-data">Writing about data</a>
+            </li>
           </ul>
         </div>
       </div>
