--- a/content-patterns/data/index.html
+++ b/content-patterns/data/index.html
@@ -45,6 +45,9 @@ footer: false
             <li>
               <a class="font-weight--bold" href="../Data">Data</a>
             </li>
+            <li>
+              <a class="font-weight--bold" href="../writing-about-data">Writing about data</a>
+            </li>
           </ul>
         </div>
       </div>
