--- a/content-patterns/using-content-types/index.html
+++ b/content-patterns/using-content-types/index.html
@@ -48,6 +48,9 @@ footer: false
             <li>
               <a href="../Data">Data</a>
             </li>
+            <li>
+              <a class="font-weight--bold" href="../writing-about-data">Writing about data</a>
+            </li>
           </ul>
         </div>
       </div>
