--- a/content-patterns/data/index.html
+++ b/content-patterns/data/index.html
@@ -46,7 +46,7 @@ footer: false
               <a class="font-weight--bold" href="../Data">Data</a>
             </li>
             <li>
-              <a class="font-weight--bold" href="../writing-about-data">Writing about data</a>
+              <a  href="../writing-about-data">Writing about data</a>
             </li>
           </ul>
         </div>
