Created related links page, updated menus

--- a/content-patterns/data/index.html
+++ b/content-patterns/data/index.html
@@ -48,6 +48,9 @@ footer: false
             <li>
               <a  href="../writing-about-data">Writing about data</a>
             </li>
+            <li>
+              <a href="../related-links">Related Links</a>
+            </li>
           </ul>
         </div>
       </div>
