--- a/content-patterns/headings/index.html
+++ b/content-patterns/headings/index.html
@@ -67,6 +67,9 @@ footer: false
             <li>
               <a class="font-weight--bold" href="../writing-about-data">Writing about data</a>
             </li>
+            <li>
+              <a href="../related-links">Related Links</a>
+            </li>
           </ul>
         </div>
       </div>
