--- a/content-patterns/content-patterns/index.html
+++ b/content-patterns/content-patterns/index.html
@@ -33,6 +33,9 @@ footer: false
             <li>
               <a href="../writing-about-data">Writing about data</a>
             </li>
+            <li>
+              <a href="../related-links">Related Links</a>
+            </li>
           </ul>
         </div>
       </div>
