Created Titling pages, updated menus, fixed some menus

--- a/content-patterns/analysis/index.html
+++ b/content-patterns/analysis/index.html
@@ -43,6 +43,9 @@ footer: false
               <a href="../using-content-types">When and how to use content types</a>
             </li>
             <li>
+              <a href="../titling-pages">Titling pages</a>
+            </li>
+            <li>
               <a href="../headings">Headings</a>
             </li>
             <li>
@@ -52,7 +55,7 @@ footer: false
               <a href="../Data">Data</a>
             </li>
             <li>
-              <a class="font-weight--bold" href="../writing-about-data">Writing about data</a>
+              <a href="../writing-about-data">Writing about data</a>
             </li>
             <li>
               <a href="../related-links">Related Links</a>
@@ -70,7 +73,7 @@ footer: false
       <p>When writing stories about statistics, focus on the 'story' – what's interesting, noteworthy or important.</p>
       <p>Don't couch the story in warnings. Where there are questions about the reliability of the data, say so as briefly as possible. Avoid repeating caveats throughout your stories.</p>
 
-  <h2 id="lead-point">Lead finding</h2>
+  <h2 id="lead-finding">Lead finding</h2>
       <p>  This should be the most important story about your new data. When thinking about importance, consider:
       </p><ul>
 
@@ -176,17 +179,17 @@ footer: false
         </table>
 
   <br>
-    <p><h3>Title</h3></p>
+    <p><h3>Headings</h3></p>
         <p>
         Describe the finding as clearly as you can in the shortest number of words. When
         people read web pages, their eyes scan shapes and headings first, trying to find
         which bits of the page are going to be most useful to them.</p>
-        <p>Even at a glance, titles should say something meaningful, and give a clear idea what the following
+        <p>Even at a glance, headings should say something meaningful, and give a clear idea what the following
         commentary is about. Front-loading your title with the most important information helps users find what they need more quickly.</p>
           <p>
             <div class="content-box">
-              <h3 class="heading-medium">For example</h3>
-              <h4>Police recorded rises in knife and gun crime, mainly in large cities</h4>
+              <h4 class="heading-medium">For example</h4>
+              <h5>Police recorded rises in knife and gun crime, mainly in large cities</h5>
             </div>
              <p>
         Be clear if there's any uncertainty in the point you're making, or you need to
