--- a/content-patterns/data/index.html
+++ b/content-patterns/data/index.html
@@ -37,6 +37,9 @@ footer: false
               <a href="../using-content-types">When and how to use content types</a>
             </li>
             <li>
+              <a href="../titling-pages">Titling pages</a>
+            </li>
+            <li>
               <a href="../headings">Headings</a>
             </li>
             <li>
@@ -64,7 +67,7 @@ footer: false
               <p>
               A brief introduction paragraph should explain where the data comes from.</p>
                   <div class="content-box">
-                    <h3 class="heading-medium">For example</h3>
+                    <h4 class="heading-medium">For example</h4>
                     <h4>Estimates of employment, unemployment, economic inactivity, hours worked and redundancies are derived from the Labour Force Survey (LFS), a survey of households.</h4>
                   </div>
 
@@ -72,7 +75,7 @@ footer: false
               <p>This section includes a link to all data related to this release. To help users find useful or related data, you can add links to up to five datasets on this topic.</p>
               <p>Each link should include the title of the dataset, followed by a 30-word description of what the dataset contains. The description should start with the most relevant data to the topic covered, mention any other data which could be useful, and identify the source (unless that's clear from the title).</p>
                   <div class="content-box">
-                    <h3 class="heading-medium">For example</h3>
+                    <h4 class="heading-medium">For example</h4>
                   <strong><span style="text-decoration:underline;">Crime in England and Wales: Annual supplementary tables</span></strong>
                   </br><em>Dataset | Released on 19 July 2018</em>
                   </br>Includes data on crime involving weapons, perceptions of the police, and anti-social behaviour. From the Crime Survey for England and Wales (CSEW).
@@ -85,7 +88,7 @@ footer: false
         <h3 id="external-links">Linking to data from other places</h3>
             <p>You can include links to specific data sources from external sources. Make this clear by including the name of the source in brackets.</p>
             <div class="content-box">
-              <h3 class="heading-medium">For example</h3>
+              <h4 class="heading-medium">For example</h4>
               <strong><span style="text-decoration:underline;">A millennium of macroeconomic data (Bank of England)</span></strong>
             </br><em>Data | Released in 2016</em>
             </br>Worksheets A49 and A50 include historic estimates of unemployment over hundreds of years.
