--- a/content-patterns/headings/index.html
+++ b/content-patterns/headings/index.html
@@ -56,6 +56,9 @@ footer: false
               <a href="../using-content-types">When and how to use content types</a>
             </li>
             <li>
+              <a href="../titling-pages">Titling pages</a>
+            </li>
+            <li>
               <a class="font-weight--bold" href="../headings">Headings</a>
             </li>
             <li>
@@ -65,7 +68,7 @@ footer: false
               <a href="../Data">Data</a>
             </li>
             <li>
-              <a class="font-weight--bold" href="../writing-about-data">Writing about data</a>
+              <a href="../writing-about-data">Writing about data</a>
             </li>
             <li>
               <a href="../related-links">Related Links</a>
