--- a/content-patterns/related-links/index.html
+++ b/content-patterns/related-links/index.html
@@ -34,6 +34,9 @@ footer: false
               <a href="../using-content-types">When and how to use content types</a>
             </li>
             <li>
+              <a href="../titling-pages">Titling pages</a>
+            </li>
+            <li>
               <a href="../headings">Headings</a>
             </li>
             <li>
@@ -72,9 +75,10 @@ footer: false
               Include the title of what you're linking to, a subtitle which includes the type of content you're linking to, along with a 30-word description of what the link points to.
               </p>
               <p>
+
                 <div class="content-box">
                   <h3 class="heading-medium">For example</h3>
-                      <strong><em>More about violent crime</em></strong>
+                      <h4>More about violent crime</h4>
                       <strong><span style="text-decoration:underline;">The nature of violent crime in England and Wales: year ending March 2017</span></strong>
                       </br><em>Article | Released on 19 July 2017</em>
                       </br>Long-term trends and the circumstances of violence (do not include the most recent statistics for the year ending December 2017).
