--- a/content-patterns/writing-about-data/index.html
+++ b/content-patterns/writing-about-data/index.html
@@ -37,6 +37,9 @@ footer: false
               <a href="../using-content-types">When and how to use content types</a>
             </li>
             <li>
+              <a href="../titling-pages">Titling pages</a>
+            </li>
+            <li>
               <a href="../headings">Headings</a>
             </li>
             <li>
@@ -69,7 +72,7 @@ footer: false
           <p>Include up to six terms, with a description of up to 50 words. List the terms in alphabetical order. If you have a more detailed list of definitions on another page, link to it at the bottom of this section.</p>
 
           <div class="content-box">
-            <h3 class="heading-medium">For example</h3>
+            <h4 class="heading-medium">For example</h4>
               <p><strong>Firearms</strong></p>
               <p>Crimes include shotguns; handguns; rifles; imitation weapons such as BB guns or soft air weapons; other weapons such as CS gas or pepper spray and stun guns; and unidentified weapons. These figures exclude conventional air weapons, such as air rifles.</p>
           </div>
@@ -85,7 +88,7 @@ footer: false
               <p>This is also the place to link to articles about upcoming changes.</p>
 
                 <div class="js-show-hide">
-                  <h3>For example</h3>
+                  <h4>For example</h4>
                   <div class="show-hide show-hide--light background--gallery margin-bottom--2">
 
                     <div class="js-show-hide__title">
