--- a/content-patterns/using-content-types/index.html
+++ b/content-patterns/using-content-types/index.html
@@ -40,6 +40,9 @@ footer: false
               <a class="font-weight--bold" href="../When and how to use content types">When and how to use content types</a>
             </li>
             <li>
+              <a href="../titling-pages">Titling pages</a>
+            </li>
+            <li>
               <a href="../headings">Headings</a>
             </li>
             <li>
@@ -49,7 +52,7 @@ footer: false
               <a href="../Data">Data</a>
             </li>
             <li>
-              <a class="font-weight--bold" href="../writing-about-data">Writing about data</a>
+              <a href="../writing-about-data">Writing about data</a>
             </li>
             <li>
               <a href="../related-links">Related Links</a>
