Changed name of "headings" page to "sections

--- a/content-patterns/analysis/index.html
+++ b/content-patterns/analysis/index.html
@@ -46,7 +46,7 @@ footer: false
               <a href="../titling-pages">Titling pages</a>
             </li>
             <li>
-              <a href="../headings">Headings</a>
+              <a href="../sections">Sections</a>
             </li>
             <li>
               <a class="font-weight--bold" href="../analysis">Analysis</a>
