--- a/content-patterns/content-patterns/index.html
+++ b/content-patterns/content-patterns/index.html
@@ -25,7 +25,7 @@ footer: false
               <a href="../titling-pages">Titling pages</a>
             </li>
             <li>
-              <a href="../headings">Headings</a>
+              <a href="../sections">Sections</a>
             </li>
             <li>
               <a href="../analysis">Analysis</a>
