--- a/content-patterns/related-links/index.html
+++ b/content-patterns/related-links/index.html
@@ -37,7 +37,7 @@ footer: false
               <a href="../titling-pages">Titling pages</a>
             </li>
             <li>
-              <a href="../headings">Headings</a>
+              <a href="../sections">Sections</a>
             </li>
             <li>
               <a href="../analysis">Analysis</a>
@@ -77,7 +77,7 @@ footer: false
               <p>
 
                 <div class="content-box">
-                  <h3 class="heading-medium">For example</h3>
+                  <h4 class="heading-medium">For example</h4>
                       <h4>More about violent crime</h4>
                       <strong><span style="text-decoration:underline;">The nature of violent crime in England and Wales: year ending March 2017</span></strong>
                       </br><em>Article | Released on 19 July 2017</em>
