--- a/content-patterns/sections/index.html
+++ b/content-patterns/sections/index.html
@@ -37,10 +37,10 @@ footer: false
           <h2 class="heading-xsmall margin-top--4 margin-bottom--1">On this page:</h2>
           <ul class="section-contents">
             <li>
-              <a href="#Headings">Headings</a>
+              <a href="#sections">Writing bulletin sections</a>
             </li>
             <li>
-              <a href="#introducing the headings in a bulletin">Introducing the headings in a bulletin</a>
+              <a href="#introducing the sections in a bulletin">Introducing the sections in a bulletin</a>
             </li>
             <li>
               <a href="#what-to-write-in-each-section">What to write in each section</a>
@@ -59,7 +59,7 @@ footer: false
               <a href="../titling-pages">Titling pages</a>
             </li>
             <li>
-              <a class="font-weight--bold" href="../headings">Headings</a>
+              <a class="font-weight--bold" href="../sections">Sections</a>
             </li>
             <li>
               <a href="../analysis">Analysis</a>
@@ -81,16 +81,16 @@ footer: false
     <!-- Content -->
 
     <div class="col col--md-two-thirds col--lg-two-thirds">
-      <h1 id="Headings">Writing bulletin headings</h1>
+      <h1 id="Headings">Writing bulletin sections</h1>
           <p>Research shows that our users are most interested in learning about our statistics and analysis of the data.</p>
           <p>Our research has shown that users come to bulletins to complete tasks. Generally, to:</p>
             <li>learn about new data
             <li>access new data
             <li>find out how certain data was collected</p>
             </li>
-          <p>Bulletin headings separate the different types of content on the page to reflect those user needs, helping users to complete their tasks easily.</p>
+          <p>Bulletin sections separate the different types of content on the page to reflect those user needs, helping users to complete their tasks easily.</p>
 
-    <h2 id="introducing the headings in a bulletin">Introducing the headings in a bulletin</h2>
+    <h2 id="introducing the sections in a bulletin">Introducing the sections in a bulletin</h2>
         <p>We use the bulletin topic in each section heading to make it clear what each section is about.</p>
         <p>For example, on the "Employment" bulletin of the Labour market release, the headings would look like this:</p>
         <div class="content-box li-grey">
