--- a/content-patterns/titling-pages/index.html
+++ b/content-patterns/titling-pages/index.html
@@ -37,7 +37,7 @@ footer: false
               <a class="font-weight--bold" href="../titling-pages">Titling pages</a>
             </li>
             <li>
-              <a href="../headings">Headings</a>
+              <a href="../sections">Sections</a>
             </li>
             <li>
               <a href="../analysis">Analysis</a>
@@ -94,4 +94,3 @@ footer: false
                   <h1>Crime overview</h1>
                   <p>Crimes against households, adults, children, businesses and society in England and Wales.</p>
                 </div>
-                    
