--- a/content-patterns/using-content-types/index.html
+++ b/content-patterns/using-content-types/index.html
@@ -30,7 +30,7 @@ footer: false
               <a href="#Articles">Articles</a>
             </li>
             <li>
-              <a href="#how-to-decide-whether-you-need-more-pages">How to decide whether you need more pages?</a>
+              <a href="#how-to-decide-whether-you-need-more-pages">How to decide whether you need more bulletins</a>
             </li>
           </ul>
 
@@ -117,7 +117,7 @@ footer: false
           <p>As with any content on our website, there should be a clear user need for everything we publish. The length and detail of an article should be relative to the interest of our users. We will measure this using analytics and through user research.</p>
           <p>An article should only be used when it is not possible to communicate all of the information users need in a bulletin (because of the number of words required, or because the analysis crosses multiple bulletins or releases, for example).</p>
 
-      <h2 id="how-to-decide-whether-you-need-more-pages">How to decide whether you need more bulletins?</h2>
+      <h2 id="how-to-decide-whether-you-need-more-pages">How to decide whether you need more bulletins</h2>
               <p>Digital publishing will help you determine whether more pages would add value. We will use search data and user research to understand what users need. We may run extra research, or suggest small-scale experiments we can run to validate the need for a new page.</p>
               <p>We will also consider:</p>
               <ul>
