Update prototypes page

--- a/prototypes.html
+++ b/prototypes.html
@@ -13,8 +13,16 @@ footer: false
     <div class="col col--md-one col--lg-one">
       <h1>Prototypes</h1>
 
-      <h2 class="margin-bottom--0">Sprint 4 - latest</h2>
-      <p>27 September 2018 to 26 September 2018</p>
+      <h2 class="margin-bottom--0">Sprint 5 - latest</h2>
+      <p>11 October 2018 to 24 October 2018</p>
+
+      <h3>Patterns</h3>
+      <ul>
+        <li><a href="sprint/5/warning-text">Warning text</a></li>
+      </ul>
+
+      <h2 class="margin-bottom--0">Sprint 4</h2>
+      <p>27 September 2018 to 10 October 2018</p>
 
       <h3>Labour market</h3>
       <ul>
