Changed Find out more to More about <topic>

--- a/content-patterns/sections/index.html
+++ b/content-patterns/sections/index.html
@@ -112,7 +112,7 @@ footer: false
                 <a href="#using-data">Strengths and limitations</a>
               </li>
               <li>
-                <a href="#more-about">Find out more</a>
+                <a href="#more-about">More about employment</a>
               </li>
               <li>
                 <a href="#more-links">You may also be interested in</a>
@@ -179,9 +179,9 @@ footer: false
         </td>
         </tr>
         <tr>
-        <td>Find out more
+        <td>More about employment
         </td>
-        <td>Links to more detailed content on this topic, such as technical articles, detailed commentary, or deeper analysis
+        <td>Links to more other content on this topic, such as technical articles, detailed commentary, or deeper analysis
         </td>
         </tr>
         <tr>
@@ -202,18 +202,18 @@ footer: false
 
 <br>
 
-<h2 id="pages-in-this-release">Pages in this release</h2>
-      <p>Where there’s a user need, we publish a number of bulletins as a “release”. Users can find their way between these pages using the “Pages in this release” menu.</p>
+<h2 id="pages-in-this-release">Bulletins in this release</h2>
+      <p>Where there’s a user need, we publish a number of bulletins as a “release”. Users can find their way between these pages using the “Bulletins in this release” menu.</p>
       <p>This list of links should:</p>
       <ul>
         <li>begin with the overview bulletin
-        <li>list the most popular pages first, based on business area understanding to begin with, and using analytics later
+        <li>list the most popular bulletins first, based on business area understanding to begin with, and using analytics later
         <li>where it makes more sense to group some pages by topic, rather than popularity, do so (employment should be followed by unemployment, for example)</li>
       </ul>
 
       <p>For example, all pages in the Labour market release would include the following links:</p>
       <div class="content-box li-grey">
-        <h2 class="heading-xsmall margin-top--4 margin-bottom--1">Pages in this collection:</h2>
+        <h2 class="heading-xsmall margin-top--4 margin-bottom--1">Bulletins in this release:</h2>
         <ul class="section-contents">
           <li>
             <a href="../overview">Labour market overview</a>
