--- a/sprint/5/warning-text.html
+++ b/sprint/5/warning-text.html
@@ -14,25 +14,25 @@ title: Warning text pattern
   <div class="col-wrap">
     <div class="col col--md-two-thirds col--lg-two-thirds">
 
-      <div class="warning-text warning-text--small">
+      <div class="warning-text" style="line-height: 24px">
         <span class="warning-text__icon" aria-hidden="false">!</span>
-        <strong class="warning-text__text warning-text__text--small">
+        <strong class="warning-text__text" style="font-size: 14px; padding-left: 64px">
           <span class="warning-text__assistive">Warning</span>
           Police recorded crime data are not designated as National Statistics.
         </strong>
       </div>
 
-      <div class="warning-text warning-text--small">
+      <div class="warning-text" style="line-height: 24px">
         <span class="warning-text__icon" aria-hidden="false">!</span>
-        <strong class="warning-text__text warning-text__text--small">
+        <strong class="warning-text__text" style="font-size: 14px; padding-left: 64px">
           <span class="warning-text__assistive">Warning</span>
           Police recorded crime data are not designated as National Statistics. This data can be affected by changes in policing practices.
         </strong>
       </div>
 
-      <div class="warning-text warning-text--small">
+      <div class="warning-text" style="line-height: 24px">
         <span class="warning-text__icon" aria-hidden="false">!</span>
-        <strong class="warning-text__text warning-text__text--small">
+        <strong class="warning-text__text" style="font-size: 14px; padding-left: 64px">
           <span class="warning-text__assistive">Warning</span>
           Police recorded crime data are not designated as National Statistics. This data can be affected by changes in policing practices and victims’ willingness to report crime. This data can be affected by changes in policing practices and victims’ willingness to report crime.
         </strong>
