Update patterns page to link to the warning text pattern for the ONS website

--- a/patterns.html
+++ b/patterns.html
@@ -68,6 +68,9 @@ footer: false
       {% include back-to-top.html %}
       <h2 id="warning-text">Warning text</h2>
       {% include warning-text.html %}
+
+      <a href="../sprint/5/warning-text">Warning text pattern as it appears on the ONS website</a>
+
       {% include back-to-top.html %}
     </div>
   </div>
