Changed "Alert" to "Warning". Added extra links to nav.

--- a/content-patterns/analysis/index.html
+++ b/content-patterns/analysis/index.html
@@ -30,6 +30,15 @@ footer: false
               <a href="#findings">Findings</a>
             </li>
             <li>
+              <a href="#Headings">Headings</a>
+            </li>
+            <li>
+              <a href="#Commentary">Commentary</a>
+            </li>
+            <li>
+              <a href="#Warnings">Warnings</a>
+            </li>
+            <li>
               <a href="#charts-and-interactives">Charts and interactives</a>
             </li>
             <li>
@@ -126,7 +135,7 @@ footer: false
     <p>A finding is a trend from the data which is worth reporting. It
     should answer a question the user might have about your statistics.</p>
     <p>Main findings consist of a title and commentary. Add visuals, such as charts,
-    tables, or interactives to back up each point. Use alerts to draw
+    tables, or interactives to back up each point. Use warnings to draw
     attention to essential limitations or uncertainty which might affect the way
     people interpret statistics.</p>
     <p>Aim for five or six main points on a page, adding up to no more than 800 words. If
@@ -179,7 +188,7 @@ footer: false
         </table>
 
   <br>
-    <p><h3>Headings</h3></p>
+    <p><h2 id="headings">Headings</h2></p>
         <p>
         Describe the finding as clearly as you can in the shortest number of words. When
         people read web pages, their eyes scan shapes and headings first, trying to find
@@ -213,7 +222,7 @@ footer: false
         </p>
         <p>
 
-    <h3>Commentary</h3>
+    <p><h2 id="Commentary">Commentary</h2></p>
         <p>Your text should be in concise, plain English and written with the user in mind.
         Consider what is the most important information that supports your title.</p>
         <p>If you're not sure something is going to be useful or interesting, don't include
@@ -224,9 +233,8 @@ footer: false
         further paragraphs and figures to add more detail and context to broaden the
         user's understanding.</p>
 
-
-      <h3>Alerts</h3>
-          <p>Alerts are designed to grab the user's attention. They can be inserted anywhere
+    <p><h2 id="Warnings">Warnings</h2></p>
+          <p>Warnings are designed to grab the user's attention. They can be inserted anywhere
           in your commentary to bring attention to very important information.</p>
               <table>
                 <tr>
@@ -236,7 +244,7 @@ footer: false
                  </td>
                 </tr>
                 <tr>
-                 <td>Use alerts to highlight essential limitations of the data
+                 <td>Use warnings to highlight essential limitations of the data
                  </td>
                  <td>Use too many warnings – it disrupts the reading experience, makes it
               difficult to understand the content and reduces the effectiveness of each warning
@@ -249,7 +257,7 @@ footer: false
                  </td>
                 </tr>
                 <tr>
-                 <td>Make your alerts short and clear
+                 <td>Make your warnings short and clear
                  </td>
                  <td>Use complicated language – when text is hard to understand, people retain
               less information
@@ -258,7 +266,7 @@ footer: false
                 <tr>
                  <td>
                  </td>
-                 <td>Lead with the alert – write your finding first, then add context. Testing
+                 <td>Lead with the warning – write your finding first, then add context. Testing
               has shown that users find it confusing when we write warnings before commentary.
                  </td>
                 </tr>
