Typo on headings link on analysis page

--- a/content-patterns/analysis/index.html
+++ b/content-patterns/analysis/index.html
@@ -30,7 +30,7 @@ footer: false
               <a href="#findings">Findings</a>
             </li>
             <li>
-              <a href="#Headings">Headings</a>
+              <a href="#headings">Headings</a>
             </li>
             <li>
               <a href="#Commentary">Commentary</a>
