--- a/sprint/5/labour-market/average-weekly-earnings/index.html
+++ b/sprint/5/labour-market/average-weekly-earnings/index.html
@@ -155,37 +155,16 @@ title: "Average weekly earnings"
                 <a href="../overview">Labour market overview</a>
               </li>
               <li>
-                <a href="../employment">Employment</a>
-              </li>
-              <li>
-                <a href="../unemployment">Unemployment</a>
-              </li>
-              <li>
                 <a class="font-weight--bold" href="../average-weekly-earnings">Average weekly earnings</a>
               </li>
-              <li>
-                <a href="#">Public and private sector employment</a>
-              </li>
-              <li>
-                <a href="#">Actual hours worked</a>
-              </li>
-              <li>
-                <a href="#">Workforce jobs</a>
+                <li>
+                <a href="../employment">Employment and unemployment</a>
               </li>
               <li>
                 <a href="#">Labour disputes</a>
               </li>
               <li>
-                <a href="#">Economic inactivity</a>
-              </li>
-              <li>
-                <a href="#">Young people in the labour market</a>
-              </li>
-              <li>
-                <a href="#">Redundancies</a>
-              </li>
-              <li>
-                <a href="#">Vacancies</a>
+                <a href="#">Jobs and vacancies</a>
               </li>
             </ul>
           </div>
