Changed TOC and page title on employment page

--- a/sprint/5/labour-market/employment/index.html
+++ b/sprint/5/labour-market/employment/index.html
@@ -5,7 +5,7 @@ primary-nav: true
 secondary-nav: true
 language-switch: false
 footer: true
-title: "Employment"
+title: "Employment and unemployment"
 ---
 
 <main id="main" role="main" tabindex="-1" class="prototype">
@@ -30,7 +30,7 @@ title: "Employment"
                   <a class="breadcrumb__link astral-link" href="../overview">Labour market</a>
                 </li>
                 <li class="breadcrumb__item">
-                  Employment
+                  Employment and unemployment
                 </li>
               </ol>
             </div>
@@ -150,42 +150,23 @@ title: "Employment"
 
             <h2 class="heading-xsmall margin-top--4 margin-bottom--1">Pages in this collection:</h2>
             <ul class="section-contents">
-              <li>
-                <a href="../overview">Labour market overview</a>
-              </li>
-              <li>
-                <a class="font-weight--bold" href="../employment">Employment</a>
-              </li>
-              <li>
-                <a href="../unemployment">Unemployment</a>
-              </li>
-              <li>
-                <a href="../average-weekly-earnings">Average weekly earnings</a>
-              </li>
-              <li>
-                <a href="#">Public and private sector employment</a>
-              </li>
-              <li>
-                <a href="#">Actual hours worked</a>
-              </li>
-              <li>
-                <a href="#">Workforce jobs</a>
-              </li>
-              <li>
-                <a href="#">Labour disputes</a>
-              </li>
-              <li>
-                <a href="#">Economic inactivity</a>
-              </li>
-              <li>
-                <a href="#">Young people in the labour market</a>
-              </li>
-              <li>
-                <a href="#">Redundancies</a>
-              </li>
-              <li>
-                <a href="#">Vacancies</a>
-              </li>
+              <ul class="section-contents">
+                <li>
+                  <a href="../overview">Labour market overview</a>
+                </li>
+                <li>
+                  <a class="font-weight--bold" href="../average-weekly-earnings">Average weekly earnings</a>
+                </li>
+                  <li>
+                  <a href="../employment">Employment and unemployment</a>
+                </li>
+                <li>
+                  <a href="#">Labour disputes</a>
+                </li>
+                <li>
+                  <a href="#">Jobs and vacancies</a>
+                </li>
+              </ul>
             </ul>
           </div>
         </div>
