Final Toc and page title changes

--- a/sprint/5/labour-market/employment/index.html
+++ b/sprint/5/labour-market/employment/index.html
@@ -155,10 +155,10 @@ title: "Employment and unemployment"
                   <a href="../overview">Labour market overview</a>
                 </li>
                 <li>
-                  <a class="font-weight--bold" href="../average-weekly-earnings">Average weekly earnings</a>
+                  <a href="../average-weekly-earnings">Average weekly earnings</a>
                 </li>
                   <li>
-                  <a href="../employment">Employment and unemployment</a>
+                  <a class="font-weight--bold" href="../employment">Employment and unemployment</a>
                 </li>
                 <li>
                   <a href="#">Labour disputes</a>
