--- a/sprint/5/labour-market/overview/index.html
+++ b/sprint/5/labour-market/overview/index.html
@@ -5,7 +5,7 @@ primary-nav: true
 secondary-nav: true
 language-switch: false
 footer: true
-title: "Labour market"
+title: "Labour market overview"
 ---
 
 <main id="main" role="main" tabindex="-1" class="prototype">
@@ -27,7 +27,7 @@ title: "Labour market"
                   <a class="breadcrumb__link astral-link" href="https://www.ons.gov.uk/employmentandlabourmarket/peopleinwork">People in work</a>
                 </li>
                 <li class="breadcrumb__item">
-                  Labour market
+                  Labour market overview
                 </li>
               </ol>
             </div>
@@ -152,37 +152,16 @@ title: "Labour market"
                 <a class="font-weight--bold" href="../overview">Labour market overview</a>
               </li>
               <li>
-                <a href="../employment">Employment</a>
-              </li>
-              <li>
-                <a href="../unemployment">Unemployment</a>
-              </li>
-              <li>
                 <a href="../average-weekly-earnings">Average weekly earnings</a>
               </li>
-              <li>
-                <a href="#">Public and private sector employment</a>
-              </li>
-              <li>
-                <a href="#">Actual hours worked</a>
-              </li>
-              <li>
-                <a href="#">Workforce jobs</a>
+                <li>
+                <a href="../employment">Employment and unemployment</a>
               </li>
               <li>
                 <a href="#">Labour disputes</a>
               </li>
               <li>
-                <a href="#">Economic inactivity</a>
-              </li>
-              <li>
-                <a href="#">Young people in the labour market</a>
-              </li>
-              <li>
-                <a href="#">Redundancies</a>
-              </li>
-              <li>
-                <a href="#">Vacancies</a>
+                <a href="#">Jobs and vacancies</a>
               </li>
             </ul>
           </div>
